--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,6 +32,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'American drama -- 20th century'
 - !lcc 'PS'
+- GITenberg
 tableOfContents: Introduction -- A lady of the weeping willow tree -- The very naked
   boy -- Jonathan makes a wish.
 title: More Portmanteau Plays
